--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
   "name": "strange-attractor",
-  "version": "0.0.1",
-  "description": "based on strange attractor script from mrdoob",
+  "version": "0.0.2",
+  "description": "Playing with Matrix4x4 and attractor algorithms.",
+  "homepage" : "http://robosparrow.github.io/strange-attractor",
   "devDependencies": {
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.6.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "esm": "^3.0.84",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "esm": "^3.2.25",
     "file-loader": "^2.0.0",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^5.2.0",
-    "npm-run-all": "^4.1.3",
+    "npm-run-all": "^4.1.5",
     "style-loader": "^0.23.1",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9",
+    "webpack": "^4.37.0",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2",
     "worker-loader": "^2.0.0"
   },
   "dependencies": {
     "mithril": "^1.1.6",
-    "muicss": "^0.9.41"
+    "muicss": "^0.9.42"
   },
   "scripts": {
     "start": "npm run dev",
     "dev": "webpack-dev-server --mode development --config webpack.config.js",
     "build": "webpack -p --progress --mode production --config webpack.config.js",
     "lint": "eslint src/**/*.js",
-    "test": "./node_modules/mocha/bin/mocha test/**/*.js --reporter spec -r esm"
+    "test": "./node_modules/mocha/bin/mocha test/**/*.js --reporter spec -r esm",
+    "deploy": "gh-pages -d dist"
   }
 }
